# procedural-organisms

./:    .gitignore  LEGAL.md  LICENSE  README.md  TODO.txt  audiotest  basic.frag  basic.vert  cleanup.sh  log.txt  osmesa-env.cpp  prueba.sh  run.sh  test  window
TODO/: TODO.txt
agent/: client.py  event_loop.py  main.py  normalizer.py  osc_messages.py  server.py  time_functions.py
audio-generator/: prueba.scd  prueba_osc.scd  script.scd  synth.scd
supercollider-server/: main.scd  tempCodeRunnerFile.scd
test-files/: local_test.sh  test  video_test  window
video-generator-local/shaders/: basic.frag
video-generator-local/src/: CMakeLists.txt  cpp_example  main.cpp
video-generator-local/src/buffer_configuration/: buffer_configuration.h
video-generator-local/src/gl_context/: gl_context.cpp
video-generator-local/src/osc_in_loop/: osc_in_loop.cpp
video-generator-local/src/osc_server/: build.sh  build_example.sh  cpp_example.cpp  osc_server.cpp
video-generator-local/src/program_exit/: program_exit.h
video-generator-local/src/render_loop/: render_loop.cpp  render_loop.h
video-generator-local/src/shader_program/: shader_program.cpp  shader_program.h
video-generator-windowed/includes/glad/: glad.h
video-generator-windowed/shaders/: basic.frag  basic.vert
video-generator-windowed/src/: main.cpp
video-generator-windowed/src/colorspaces/: HSL.cpp  HSL.h
video-generator-windowed/src/function_generator/: function_generator.scd  test.scd
video-generator-windowed/src/gl_context/: gl_context.h
video-generator-windowed/src/osc_in_loop/: osc_in_loop.cpp  osc_in_loop.h
video-generator-windowed/src/osc_server/: osc_server.cpp  osc_server.h
video-generator-windowed/src/program_exit/: program_exit.cpp
video-generator-windowed/src/render_loop/: render_loop.cpp  render_loop.h
video-generator/shaders/: basic.frag  basic.vert
video-generator/src/: CMakeLists.txt  main.cpp
video-generator/src/buffer_configuration/: buffer_configuration.cpp  buffer_configuration.h
video-generator/src/function_generator/: function_generator.scd
video-generator/src/gl_context/: gl_context.cpp  gl_context.h
video-generator/src/osc_in_loop/: osc_in_loop.cpp
video-generator/src/osc_server/: osc_server.cpp  osc_server.h
video-generator/src/program_exit/: program_exit.cpp  program_exit.h
video-generator/src/render_loop/: render_loop.cpp  render_loop.h
video-generator/src/shader_program/: shader_program.cpp  shader_program.h
